# rusty-engine

./: CLAUDE.md  Cargo.toml  ECS_COMMAND_BUFFER_DESIGN.md  ECS_EVENT_SYSTEM_DESIGN.md  ECS_SCHEDULER_ALGORITHMS.md  ECS_SHARD_DESIGN.md  ECS_STORAGE_CHANGE_DESIGN.md  ECS_STORAGE_NOTES.md  ECS_SYSTEM_REFERENCE.md  README.md
app/: Cargo.toml
bench/: Cargo.toml
bench/benches/: ecs_micro.rs  ecs_scenarios.rs
bench/src/: components.rs  frame_timer.rs  lib.rs  memory.rs
bench/src/scenarios/: game_world.rs  mod.rs  particles.rs  physics.rs
cli/: Cargo.toml
cli/src/: cli.rs
engine/: Cargo.toml  README.md  librust_out.rlib
engine/examples/: life.rs  system_parameters_demo.rs
engine/src/: lib.rs  main.rs
engine/src/core/: cli_control.rs  context.rs  control.rs  engine.rs  frame.rs  logger.rs  logic.rs  mod.rs  service.rs  sim_loop.rs  state.rs  thread.rs  time.rs
engine/src/core/ecs/: mod.rs  util.rs
engine/src/core/ecs/archetype/: mod.rs  registry.rs
engine/src/core/log/: channel.rs  mod.rs
engine/src/core/runner/: looped.rs  mod.rs  once.rs
engine/src/core/tasks/: executor.rs
engine/src/ecs/: mod.rs
engine/src/ecs/archetype/: mod.rs  registry.rs
engine/src/ecs/component/: info.rs  mod.rs  registry.rs  set.rs  spec.rs
engine/src/ecs/entity/: mod.rs  reference.rs  registry.rs
engine/src/ecs/event/: broker.rs  mod.rs  stream.rs
engine/src/ecs/macros/: Cargo.toml
engine/src/ecs/query/: data.rs  mod.rs  param.rs  result.rs  source.rs
engine/src/ecs/schedule/: mod.rs  phase.rs  plan.rs
engine/src/ecs/storage/: archetype.rs  cell.rs  change.rs  column.rs  entity.rs  index.rs  location.rs  mem.rs  mod.rs  row.rs  table.rs  unique.rs  value.rs  view.rs
engine/src/ecs/system/: command.rs  function.rs  mod.rs  param.rs  registry.rs
engine/src/ecs/unique/: mod.rs
engine/src/ecs/util/: macros.rs
engine/src/ecs/world/: access.rs  mod.rs  registry.rs  shard.rs  type_registry.rs
(+41 files in other folders)
