[package]
name = "rusty_bench"
version = "0.0.1"
edition = "2024"

[dependencies]
rusty_engine = { path = "../engine" }
rusty_macros = { path = "../engine/src/ecs/macros" }

# Memory profiling
dhat = "0.3"

# Random data generation for realistic scenarios
rand = "0.8"
rand_chacha = "0.3"
crossterm = "0.29.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ecs_micro"
harness = false

[[bench]]
name = "ecs_scenarios"
harness = false

[features]
# Enable memory profiling (adds overhead, use only when needed)
memory_profiling = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(bench)'] }
