[package]
name = "rusty_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
crossterm = { version = "0.29.0" }
rusty_engine = { path = "../engine" }
tui = { version = "0.19", default-features = false, features = ['crossterm'] }
crossbeam = "0.8.4"
log = { version = "0.4.29", features = ["std"] }
unicode-width = "0.2.2"
