[package]
name = "engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
crossbeam = "0.8.1"
signal-hook = "0.3.10"
rustyline = "9.0.0"
termwiz = {version = "0.13.0", features = ["widgets"] }